@@ -13,6 +13,8 @@
   <property name="jar.dir" value="jars" />
   <property name="lib.dir" value="lib" />
   
+  <property name="looks.jar" value="${lib.dir}/looks-2.1.3.jar"/>
+	
   <target name="dirs">
     <mkdir dir="${output.dir}" />
     <mkdir dir="${output-test.dir}" />
@@ -21,7 +23,7 @@
   
   <!-- build -->
   <target name="build" depends="dirs" description="Build project">
-    <javac srcdir="${source.dir}" destdir="${output.dir}" debug="on" />
+    <javac srcdir="${source.dir}" destdir="${output.dir}" debug="on" classpath="${looks.jar}" />
     <copydir src="${source.dir}/fit/guirunner/resource"
 	     dest="${output.dir}/fit/guirunner/resource" />
   </target>
@@ -49,7 +51,7 @@
   <!-- jars -->
   <target name="jars" depends="build, tests">
     <jar destfile="${jar.dir}/guirunner.jar" basedir="${output.dir}" manifest="MANIFEST.MF">
-        <zipfileset src="${lib.dir}/looks-2.1.3.jar" />
+        <zipfileset src="${looks.jar}" />
     </jar>
   </target>
 
