@@ -1,6 +1,6 @@
 package fit.guirunner;
 
 public interface RunnerVersion {
-  final String RUNNER_VERSION = "003";
-  final String RUNNER_ID = "$Id: RunnerVersion.java,v 1.2 2007/03/09 16:44:30 mbusik Exp $";
+  final String RUNNER_VERSION = "004";
+  final String RUNNER_ID = "$Id: RunnerVersion.java,v 1.3 2007/03/11 23:07:48 mbusik Exp $";
 }
